Bug 801808: Replace DocAccessible constructor's PresShell null-check with an assertion. r=tbsaunde